buttons are baaadddd

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,5 +1,16 @@
+//colors
 $primary-color: #18cfab
 $secondary-color: #1c2a33
 $nav-color: #5a5954
-$main-font: "Moncerat"
+$primary-light: #18cfab
+$info-btn: #00cbf6
+
+//sizes
 $header-height: 120px
+
+
+//fonts
+$main-font: "Montserrat"
+
+//transitions
+$transition: all .25s ease
