--- a/sass/_landing.sass
+++ b/sass/_landing.sass
@@ -58,7 +58,26 @@ body
             position: absolute
             left: 0
             top: 0
-            width: 100% 
+            width: 100%
             height: 100%
             background-color: rgba(23, 23, 23, .6)
+        .centered-element
+          font-family: $main-font
+          z-index: 2
+          color: white
+          h2, h1
+            text-transform: uppercase
+            font-size: 35px
+            font-weight: 700
+          h2
+            margin-top: 0
+          h1
+            font-size: 79px
+          p
+            color: #d4d4d4
+            font-size: 34px
+            font-weight: 300
+          .home-buttons
+            margin-top: 142px
+            
 
