buttons are baaadddd

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -19,11 +19,11 @@
   box-shadow: none
   transition: all 0.25s ease
   margin: 0 15px
-  .btn-info
-    background-color: #18cfab
-    &:hover
-      background-color: lighten(#18cfab, 10%)
-  .btn-success
+  &.btn-info
     background-color: #00cbf6
     &:hover
       background-color: lighten(#00cbf6, 10%)
+  &.btn-success
+    background-color: #18cfab
+    &:hover
+      background-color: lighten(#18cfab, 10%)
