--- a/sass/_landing.sass
+++ b/sass/_landing.sass
@@ -17,7 +17,7 @@ body
       .ham-nav-toggle
         margin: 40px 0
       a.logo img
-        margin: 26px 0
+        margin: 6px 0
         box-sizing: border-box
       .ham-navigation li
         list-style-type: none
@@ -25,7 +25,7 @@ body
         .first-nav-elem
           padding-left: 15px
         a
-          padding: 51px 6.5px
+          padding: 30px 6.5px
           box-sizing: border-box
           text-transform: uppercase
           font-size: 13px
@@ -35,7 +35,7 @@ body
           display: inline-block
 
       span.search-button
-        padding: 51px 18.5px
+        padding: 30px 18.5px
 
   main
     section.ham-home-bg
@@ -43,7 +43,7 @@ body
       background-size: cover
       position: relative
     section.ham-home
-        padding: 0
+        padding-top: $header-height
         .slider-wrap
           min-height: 600px
           position: relative
@@ -78,6 +78,6 @@ body
             font-size: 34px
             font-weight: 300
           .home-buttons
-            margin-top: 142px
+            margin-top: 80px
 
 
