--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,12 +1,12 @@
 //colors
 $primary-color: #18cfab
 $secondary-color: #1c2a33
-$nav-color: #5a5954
+$nav-color: #49473f
 $primary-light: #18cfab
 $info-btn: #00cbf6
 
 //sizes
-$header-height: 120px
+$header-height: 80px
 
 
 //fonts
