not responsive, but at least it works :D

--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -27,3 +27,15 @@
     background-color: #18cfab
     &:hover
       background-color: lighten(#18cfab, 10%)
+
+.section-header
+  font-size: 36px
+  margin-top: 99px
+  text-align: center
+
+.two-lines
+  width: 100%
+
+.two-lines-img
+  display: block
+  margin: 26px auto
