--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -4,9 +4,11 @@ $secondary-color: #1c2a33
 $nav-color: #49473f
 $primary-light: #18cfab
 $info-btn: #00cbf6
+$feature-desc: #777777
+$feature-head: #717171
 
 //sizes
-$header-height: 80px
+$header-height: 120px
 
 
 //fonts
