--- a/sass/_landing.sass
+++ b/sass/_landing.sass
@@ -17,7 +17,7 @@ body
       .ham-nav-toggle
         margin: 40px 0
       a.logo img
-        margin: 6px 0
+        margin: 26px 0
         box-sizing: border-box
       .ham-navigation li
         list-style-type: none
@@ -25,7 +25,7 @@ body
         .first-nav-elem
           padding-left: 15px
         a
-          padding: 30px 6.5px
+          padding: 51px 6.5px
           box-sizing: border-box
           text-transform: uppercase
           font-size: 13px
@@ -35,7 +35,7 @@ body
           display: inline-block
 
       span.search-button
-        padding: 30px 18.5px
+        padding: 51px 18.5px
 
   main
     section.ham-home-bg
@@ -43,7 +43,6 @@ body
       background-size: cover
       position: relative
     section.ham-home
-        padding-top: $header-height
         .slider-wrap
           min-height: 600px
           position: relative
@@ -62,6 +61,7 @@ body
             height: 100%
             background-color: rgba(23, 23, 23, .6)
         .centered-element
+          margin-top: 40px
           font-family: $main-font
           z-index: 2
           color: white
@@ -78,6 +78,55 @@ body
             font-size: 34px
             font-weight: 300
           .home-buttons
-            margin-top: 80px
+            margin-top: 14vh
+    section.ham-advantages
+      .adv-elem
+        padding-top: 95px
+        min-height: 365px
+        text-align: center
+        margin-bottom: 0
 
+        .adv-icon
+          font-size: 80px
+          margin-bottom: 30px
+          transition: $transition
+          &:hover
+            transform: scale(1.3)
+        .adv-header
+          font-size: 20px
+          font-weight: bold
+          text-transform: uppercase
+      .adv-elem:nth-child(2n)
+        background-color: $primary-color
+        color: #fff
+      .adv-elem:nth-child(2n+1)
+        background-color: $secondary-color
+        color: $primary-color
+
+    section.ham-features
+      .row
+        margin-left: -15px
+        margin-right: -15px
+        .feature-item
+          padding: 0 30px
+          margin-bottom: 75px
+          .feature-icon
+            position: relative
+            bottom: -4px
+            font-size: 28px
+            color: $primary-color
+            margin-right: 20px
+          .feature-header
+            transition: $transition
+            white-space: nowrap
+            font-size: 18px
+            font-weight: bold
+            color: $feature-head
+            margin-bottom: 25px
+            &:hover
+              color: $primary-color
+          .feature-decsription
+            font-size: 14px
+            font-weight: 300
+            color: $feature-desc
 
