--- a/sass/_landing.sass
+++ b/sass/_landing.sass
@@ -234,6 +234,71 @@ body
                 color: #ffffff
                 font-size: 13px
 
+    section.our-work
+      ul.mixitup-filters
+        li
+          display: inline-block
+
+@keyframes bounce_inTurnFadingTextG
+  0%
+    color: rgb(0,0,0)
+  100%
+    color: rgb(255,255,255)
+
+.loader
+  position: fixed
+  bottom: 0
+  left: 0
+  z-index: 1000
+  height: 100%
+  width: 100%
+  background: #fff
+  .css-loader
+    position: absolute
+    left: 46%
+    bottom: 50%
+    #inTurnFadingTextG
+      width: 234px
+      margin: auto
+    .inTurnFadingTextG
+      color: rgb(0,0,0)
+      font-family: "Arial", "sans-serif"
+      font-size: 42px
+      text-decoration: none
+      font-weight: normal
+      font-style: normal
+      float: left
+      animation-name: bounce_inTurnFadingTextG
+      animation-duration: 2.09s
+      animation-iteration-count: infinite
+      animation-direction: normal
+    #inTurnFadingTextG_1
+      animation-delay: 0.75s
+    #inTurnFadingTextG_2
+      animation-delay: 0.9s
+    #inTurnFadingTextG_3
+      animation-delay: 1.05s
+    #inTurnFadingTextG_4
+      animation-delay: 1.2s
+    #inTurnFadingTextG_5
+      animation-delay: 1.35s
+    #inTurnFadingTextG_6
+      animation-delay: 1.5s
+    #inTurnFadingTextG_7
+      animation-delay: 1.64s
+
+.adv-elem:nth-child(2)
+  .adv-header, .adv-icon
+    animation-delay: 300ms
+.adv-elem:nth-child(3)
+  .adv-header, .adv-icon
+    animation-delay: 600ms
+.adv-elem:nth-child(4)
+  .adv-header, .adv-icon
+    animation-delay: 900ms
+
+
+
 
 
 
